deleteAnnouncement
